8291633: Build failures with GCC 11, Alpine 3 due to incompatible casts from nullptr

Backport-of: c89556f6cd4d0b64f3e9e2f1dc7c51634522f205